@@ -1,6 +1,11 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Add maximum size for HTTP::Message->decoded_content
+      This can be used to limit the size of a decompressed HTTP response,
+      especially when making requests to untrusted or user-specified servers.
+      The $HTTP::Message::MAXIMUM_BODY_SIZE variable and the ->max_body_size
+      accessor can set this limit. (GH#181) (Max Maischein)
 
 6.40      2022-10-12 15:45:52Z
     - Fixed two typos in the doc, originally reported by FatherC
